add basic graalvm support